# work

./: .gitignore
CMKL/: .gitignore  CMKL.txt
CMKL/Design Thinking/: interv.txt
CMKL/Entrepreneur/: Redesign of a walker.docx
CMKL/Game Engine Fundamental/: .gitignore  TODO.md
CMKL/Game Engine Fundamental/Blender/: cone.fbx
CMKL/Game Engine Fundamental/Blender/Lulu/: lulu.blend  lulu.blend1
CMKL/Game Engine Fundamental/Blender/cone/: untitled.blend
CMKL/Game Engine Fundamentals/Blender/: elf.blend  elf0.1.blend1
CMKL/Improvisional Acting/: Self eval.docx  UTA HAGEN 6 steps_1394500384.docx
KMITL/Yr1_Sem1/Rust/: rust cheat sheet.docx
KMITL/Yr1_Sem2/Discrete Math/: SieveAndEuclid.py
KMITL/Yr1_Sem2/ObjectOrientedProgramming/: main.cpp  objects.cpp  objects.hpp
KMITL/Yr1_Sem2/ObjectOrientedProgramming/HW/HW_10/: CMakeLists.txt  homework10.docx  q1.cpp  q12.cpp  q2.cpp
KMITL/Yr1_Sem2/ObjectOrientedProgramming/HW/HW_2/: CMakeLists.txt  q1.cpp  q2.cpp  q2.hpp  q2_2.cpp  q3.cpp  q3.hpp  svg.html
KMITL/Yr1_Sem2/ObjectOrientedProgramming/lab/lab9/acppx-chapter14/chapter14/: CMakeLists.txt  core.cpp  core.hpp  grade.cpp  grade.hpp  handle.hpp  median.hpp  ptr.hpp  read_hw.cpp  ref_handle.hpp  std_main1.cpp  std_main2.cpp  std_main3.cpp  str.cpp  str.hpp  student_info.cpp  student_info.hpp  urls.cpp  urls.hpp  urls.htm  urls_main.cpp  vec.hpp  vec_clone.cpp
KMITL/Yr1_Sem2/ObjectOrientedProgramming/lab/lab9/using_libs/using_libs/: CMakeLists.txt  notes.txt  range_ex1.cpp  scn_ex1.cpp
KMITL/Yr2_Sem1/FromExcelToExcellent/: fina;.docx
KMITL/Yr2_Sem1/Probability&Statistic/: EasyFit 3.0.lnk  Probstat Termpaper.docx  R 4.3.1.lnk  RStudio.lnk
KMITL/Yr2_Sem1/Proffessional communication or sth/: News story.docx
KMITL/Yr2_Sem1/WebProgramming/: Postman.lnk
KMITL/Yr2_Sem2/AlgorithmDesignAnalysis/: ADA_Final_ProgrammingExam.py  ADA_final.py
KMITL/Yr2_Sem2/ComputerNetworks/: 65011277 VLAN homework.pkt  Lab10 -Introduction to IP.docx  Lab11_65011277.pkt  Lab12_65011277.pkt  LabExam2024-65011277-v1.pkt  LabExam2024-65011277-v2.pkt  lab1.pkt  lab2018.pkt  lab2018Dynamic.pkt  lab2020.pkt  lab2022.pkt  labtemplate2.pkt  oldNetworkExamTry - Copy.pkt
KMITL/Yr2_Sem2/FrontwareInternational/: Intern class diagram.eapx  Internship-Report-v6.docx  fluxcore.lnk  machine_credentials_d60b541d475af3e10335573a2f1d6c30e63e1794f53cd2b6a5be24cadbf22a9e.txt  uninstall_fluxcore.lnk
KMITL/Yr2_Sem2/JapaneseForCommunication/: Japanese Communication Schedule for Student.xlsx
KMITL/Yr2_Sem2/Seminar/: SE Seminar Report Cover Page.docx
KMITL/Yr2_Sem2/SoftwareEngineeringPrinciple/: SEP Lab HW Cover 2023.docx
KMITL/Yr3_Sem1/AI/: README.md
KMITL/Yr3_Sem1/Advanced Database/: README.md
KMITL/Yr3_Sem1/Hackathon Lecture/: note.md
KMITL/Yr3_Sem1/Machine Learning/: .gitignore  65011572_ML_GenderClassify.ipynb  water.ipynb
KMITL/Yr3_Sem1/Operating System/: README.md
KMITL/Yr3_Sem1/Software Design & Analysis/: 1.1 SDA Introduction.pptx  1.2 SDA refactoring.pptx  10 2 SDA chain flyweight.pptx  10.1 SDA microservices.pptx  10.3 GroupLab10.pptx  2.1 SDA Modularity.pptx  2.2 SDA DP foundations.pptx  3.1 SDA Arch Characteristics defined.pptx  3.2 SDA Decorator FactoryMethod.pptx
KMITL/Yr3_Sem1/WebService/: README.md  mockFinal.eapx
KMITL/Yr3_Sem1/aws_deploy/: README.md  pubspec.yaml
KMITL/Yr3_Sem2/Computer Graphics and Mixed Reality/: Computer Graphics and Mixed Reality.sln
KMITL/Yr3_Sem2/Software Development Process and Project Management/: SDP_all_summary.md
KMITL/defold/Rhythmus Diabolus/: game.project
KMITL/kattis/easy/: DRM_Encrypt.py  apaxiaaans.py  average_Letter.py  grading.py  grocery.py  jonAAHDoctor.py  nodupe.py  pizza.py  sort.py  timeMinusFourtyFive.py  timeloop.java  validate_Brackets.py  whichisgreater.java
KMITL/test/raytracing sfml cpp/: read.txt  wtf.cpp
NotSchool/: Girilliorno.psd  PE.psd  infinity.psd
NotSchool/Alarmm/: settings.gradle.kts
NotSchool/Alarmm/app/: build.gradle.kts
NotSchool/C++/test/: main.cpp
NotSchool/Illjoy/: Illjoy.psd
NotSchool/discordBot/: .env  LIS.py  LIS2.py  booth.py  cut.py  cutBottom.py  cuttingSticks.py  data.json  main.py  numPick.py  responses.py  settings.py  subsetSum.py
NotSchool/htmlcss/: style.css  try.html
NotSchool/maimai/: maj.txt
NotSchool/maimai/Din Don Dan/: maidata.txt  majSetting.json  majdata.json
NotSchool/maimai/Majdata_Beta3.1/: EditorSetting.json
NotSchool/maimai/mymai/: 3simai_304_60fps.swf  maidata.bak.txt  maidata.txt  maidata_real one.txt  majSetting.json  majdata.json  yFlash Playerฬ“่ๆz.txt  ๐“ว๑ล.txt
NotSchool/py/: R_Roulette.py
kmitl_yr_3_sem1/Operating Syatem/: README.md
kmitl_yr_3_sem1/SDA/: TwitterAccount.java  commandMethod.java  decoration.java  delegation.java  factoryMethod.java  mementoMethod.java  singleton.java  state.java  templateMethod.java
(+937 files in other folders)
